Changelog
=========
[Alexandru Ghica - alec.ghica@eaudeweb.ro]
[Alin Voinea - alin.voinea@eaudeweb.ro]
[Antonio De Marinis - demarinis@eea.europa.eu]

1.1-dev - (unreleased)
----------------------

1.0 - (2011-03-16)
------------------
 * Initial release [voineali #2773]
